  - (src/interpret.c, src/autoconf/*)
    Added option to show the evaluation costs in the stacktrace.
  - (src/pkg-iksemel.c, many files)
    Added support for XML parsing with iksemel. (Bug #538, thanks, Bardioc!)
            (Zesstra)
  - (efuns.c)
    Fixed potential crashes due to stack overflows in process_string(),
    regexplode(), regexp() and present_clone(). (Bug #578)

13-Dec 2008 (Zesstra)
  - (pkg-mysql.c)
    Allocate temporary memory for the temporary string in f_db_conv_string()
    on the heap, because the string is user supplied and calling the
    function with a large string may cause a crash due to stack overflow.
    (Bug #582)
  - (efuns.c, strfuns.c)
    Corrected format specifiers in errorf() calls.

12-Dec 2008 (Zesstra)
  - (port.h, port.c, efuns.h, efuns.c, func_spec, gcollect.c)
       added mkime(), an efun which converts a date/time information as
       returned by local_time() to a unix timestamp (integer value).
       added strftime(), an efun which converts a timestamp to a formatted
       string using a format string with a variety of format specifiers.
       changed caching behavious for ctime(): cache is now in the efun, not in
       port.c which spares the driver to search for the shared string and
       saves about 85% of execution time in case of cache hits. Removed
       caching in case of millisecond precision as cache hits are rather
       unlikely.
       Added handlers for the garbage collection which take care of the cache
       for ctime().
   - (main.c)
       use also locale defined in LC_TIME.

04-Oct 2008 (Zesstra)
  - (object.c)
    Allocate memory for the filename in f_save_object() and f_restore_object()
    on the heap instead of the stack. Use the generic error handler in
    save_object() and the already existing one in restore_object() to free the
    buffer in case of errors. Minor changes in error handling in
    f_restore_object() by pushing the handler earlier onto the stack and using